@@ -1002,6 +1002,7 @@ g_simple_async_result_get_op_res_gssize
 g_simple_async_result_set_op_res_gboolean
 g_simple_async_result_get_op_res_gboolean
 g_simple_async_result_get_source_tag
+g_simple_async_result_is_valid
 g_simple_async_result_set_handle_cancellation
 g_simple_async_result_complete
 g_simple_async_result_complete_in_idle
