@@ -634,6 +634,7 @@ g_simple_async_result_set_from_error
 g_simple_async_result_propagate_error 
 g_simple_async_result_set_error 
 g_simple_async_result_set_error_va 
+g_simple_async_result_is_valid
 g_simple_async_report_error_in_idle 
 g_simple_async_report_gerror_in_idle 
 #endif
